fixed accessing dom elemengt

--- a/src/components/firertc/fire-rtc.scss
+++ b/src/components/firertc/fire-rtc.scss
@@ -1,22 +1,3 @@
-/* #myvid {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
-}
-
-#yourvid {
-  bottom: 0%;
-right: 0%;
-position: fixed;
-  width: 110px; 
-  height: 110px;
-  
-} */
-
-
-
 
   .video {
     bottom: 0%;
@@ -24,4 +5,13 @@ position: fixed;
     position: fixed;
       width: 110px; 
       height: 110px;
+  }
+
+
+  .endvideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
   }
