--- a/src/components/firertc/fire-rtc.scss
+++ b/src/components/firertc/fire-rtc.scss
@@ -5,6 +5,8 @@
     position: fixed;
       width: 110px; 
       height: 110px;
+      z-index: 10;
+
   }
 
 
@@ -14,4 +16,24 @@
     bottom: 0;
     min-width: 100%; 
     min-height: 100%;
+
   }
+
+
+
+  .fab {
+    width: 40px;
+    height: 40px;
+    background-color: red;
+    border-radius: 50%;
+    font-size: 27px;
+    line-height: 50px;
+    color: white;
+    text-align: center;
+    position: fixed;
+    left: 50px;
+    bottom: 50px;
+    z-index: 10000000000;
+
+    
+ }
